# Compiler-Generator

./: CMakeLists.txt  Grammar.txt  GrammarTest.txt  README.md  Rules.txt  main.cpp  util.cpp  util.h
.github/workflows/: gtest-ci.yaml
DFAConverter/: CMakeLists.txt  DFA.cpp  DFA.h
Docs/: Lexical Phase Documentation.md  Syntax Phase Documentation.md
Google_tests/: CMakeLists.txt  DFATest.cpp  GrammarConverterTest.cpp  IntegrationTest.cpp  LP_IntegrationTest.cpp  LP_NFATest.cpp  NFATest.cpp  ParserTest.cpp  RegularDefinitionTest.cpp  RegularDefinitonTest.cpp  RulesConverterTest.cpp  RulesParserTest.cpp  SP_FirstSetGeneratorTest.cpp  SP_FollowSetGeneratorTest.cpp  SP_GrammarConverterTest.cpp  SP_ParsingTest.cpp  STGeneratorTest.cpp  UtilsTest.cpp  utilsTest.cpp
Google_tests/GrammarExamples/: 1
Google_tests/STGeneratorTestSamples/: 1  2  3
Inputs/: Grammar.txt  GrammarTest.txt  Rules.txt  input.txt
Inputs/Z.SampleTests/: 2  3
LexicalPhase/: CMakeLists.txt
LexicalPhase/DFAConverter/: DFA.cpp  DFA.h
LexicalPhase/NFAConverter/: NFA.h  State.h
LexicalPhase/RulesParser/: CMakeLists.txt  RegularDefinition.cpp  RegularDefinition.h  RulesConverter.cpp  RulesConverter.h
LexicalPhase/SymbolTableGenerator/: CMakeLists.txt  LAOutput.h  STGenerator.cpp  STGenerator.h  STRow.cpp  STRow.h  SyntaxError.cpp
NFAConverter/: CMakeLists.txt  NFA.cpp  NFA.h  NFACombiner.cpp  NFACombiner.h  State.cpp  State.h  Transition.cpp  Transition.h
Outputs/: parsingTable.csv
ParserPhase/: CMakeLists.txt  Common.h  Parser.cpp  Parser.h  ParsingTree.h  Production.h  Symbol.h  Token.h
ParserPhase/Common/: NonTerminal.cpp  Symbol.h
ParserPhase/FirstAndFollowGenerator/: FollowSetsGenerator.h  ParserSet.cpp  ParserSet.h
ParserPhase/GrammarParser/: CMakeLists.txt  Grammar.h  GrammarConverter.cpp  GrammarConverter.h
ParserPhase/PredictiveParser/: CMakeLists.txt  Common.h  Parser.cpp  Parser.h  ParsingResult.cpp  ParsingResult.h  ParsingTableEntry.cpp  ParsingTableEntry.h  ParsingTrace.cpp  ParsingTrace.h  ParsingTree.cpp  ParsingTree.h  Token.h
RulesParser/: CMakeLists.txt  RegularDefinition.cpp  RegularDefinition.h  RegularExpression.cpp  RegularExpression.h  RulesConverter.cpp  RulesConverter.h  regularDefinition.cpp  regularDefinition.h  regularExpression.cpp  regularExpression.h
SymbolTableGenerator/: CMakeLists.txt  LAOutput.cpp  LAOutput.h  LATrace.cpp  LATrace.h  STGenerator.cpp  STGenerator.h  STRow.h  SyntaxError.cpp  SyntaxError.h
SyntaxPhase/: CMakeLists.txt
SyntaxPhase/Common/: CMakeLists.txt  NonTerminal.cpp  NonTerminal.h  Symbol.cpp  Symbol.h  Terminal.cpp  Terminal.h
SyntaxPhase/FirstAndFollowGenerator/: CMakeLists.txt  FirstSet.cpp  FirstSet.h  FirstSetsGenerator.cpp  FirstSetsGenerator.h  FollowSet.cpp  FollowSet.h  FollowSetsGenerator.cpp  FollowSetsGenerator.h  ParserSet.cpp  ParserSet.h
SyntaxPhase/GrammarParser/: CMakeLists.txt  Grammar.cpp  Grammar.h  GrammarConverter.cpp  GrammarConverter.h  NonTerminal.cpp  NonTerminal.h  NonTerminalSymbol.cpp  NonTerminalSymbol.h
SyntaxPhase/PredictiveParser/: CMakeLists.txt  Common.h  Parser.cpp  Parser.h  ParsingResult.cpp  ParsingResult.h  ParsingTableEntry.cpp  ParsingTableEntry.h  ParsingTrace.cpp  ParsingTrace.h  ParsingTree.cpp  Token.h
Util/: CMakeLists.txt  Util.cpp  Util.h  util.cpp
docs/: Lexical Phase Documentation.md
